--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ background-color: #31085f;
   display: flex;
   width: 100%;
   gap: 20px;
-  background: #3e1163;
+  background: #3b0f5e;
   padding: 30px;
   border-radius: 20px;
 }
@@ -349,8 +349,6 @@ background-color: #31085f;
   
 
 }
-
-
 .host h3 {
   text-align: center;   
   font-size: 28px;
@@ -358,9 +356,6 @@ background-color: #31085f;
   font-weight: 700;
   color: #ffffff;         
 }
-
-
-
 
 .why-techwave {
   padding: 80px 6%;
@@ -438,7 +433,7 @@ background-color: #31085f;
 }
 
 .music-btn::after {
-  content: "♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩";
+  content: "♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪ ♫ ♩♪";
   position: absolute;
   left: 50%;
   bottom: 8px;
