--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav a {
 }
 
 .logo span {
-  color: #ff4ecd,#dbea01;
+  color: #ab2384,#dbea01;
 
 
 }
@@ -85,7 +85,7 @@ color: transparent;
 }
 
 .hero h1 {
-  font-size: 50px;
+  font-size: 47px;
   margin-top: 20px;
 }
  
